Style columns to repair overflow error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 html {
     display: inline-block;
-    overflow: scroll;
+    overflow: auto;
 }
 
 body {
@@ -18,6 +18,7 @@ body {
     padding-left: 0;
     padding-right: 0;
     margin: 0 auto;
+    height: 50vh;
 }
 
 /*-------------------------- Ttles, subtitles and special text */
@@ -59,8 +60,8 @@ h1 {
 .quiz-container {
     font-family: 'Futura-PT', sans-serif;
     text-align: center;
-    overflow: hidden;
     background: rgba(0, 0, 0, 0.7);
+    height: 100vh;
 }
 
 #question {
@@ -75,18 +76,17 @@ h1 {
 
 #progress {
     color: #DBD8D8;
-    text-shadow: 1px 2px #2F2F2F;
-    font-size: 20px;
+    text-shadow: 1px 1px 2px #b00d0d;
+    font-size: 1rem;
     text-align: center;
     margin-top: 4rem;
-    padding-top: 20px;
+    padding-top: 60px;
     font-family: 'Trajan-Pro-3', serif;
     padding-bottom: 20px;
 }
 
 .container-fluid {
     margin: 0 auto;
-    overflow: scroll;
 }
 
 /*-------------------------- Multiple Choice Questions */
@@ -244,10 +244,11 @@ img {
     }
     #progress {
         color: #fafafa;
-        font-size: 18px;
+        font-size: 1rem;
         text-align: center;
         margin-top: 40px;
-        padding-top: 10px;
+        padding-top: 90px;
+        padding-bottom: 20px;
     }
     button#btn0, button#btn1, button#btn2, button#btn3 {
         background-color: #000;
